--- a/package.json
+++ b/package.json
@@ -1,43 +1,23 @@
 {
-	"name": "@alloc/quick-lru",
-	"version": "5.2.0",
-	"description": "Simple “Least Recently Used” (LRU) cache",
-	"license": "MIT",
-	"repository": "sindresorhus/quick-lru",
-	"funding": "https://github.com/sponsors/sindresorhus",
-	"author": {
-		"name": "Sindre Sorhus",
-		"email": "sindresorhus@gmail.com",
-		"url": "https://sindresorhus.com"
-	},
-	"engines": {
-		"node": ">=10"
-	},
-	"scripts": {
-		"test": "xo && nyc ava && tsd"
-	},
-	"files": [
-		"index.js",
-		"index.d.ts"
-	],
-	"keywords": [
-		"lru",
-		"quick",
-		"cache",
-		"caching",
-		"least",
-		"recently",
-		"used",
-		"fast",
-		"map",
-		"hash",
-		"buffer"
-	],
-	"devDependencies": {
-		"ava": "^2.0.0",
-		"coveralls": "^3.0.3",
-		"nyc": "^15.0.0",
-		"tsd": "^0.11.0",
-		"xo": "^0.26.0"
-	}
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.2.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.4",
+    "@eslint/eslintrc": "^3"
+  }
 }
